United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6876037 CTW fails jdk7/hotspot/src/share/vm/opto/type.cpp:2055. assert(bits,"Use TypePtr for NULL")
6876037 : CTW fails jdk7/hotspot/src/share/vm/opto/type.cpp:2055. assert(bits,"Use TypePtr for NULL")

Details
Type:
Bug
Submit Date:
2009-08-26
Status:
Closed
Updated Date:
2011-03-08
Project Name:
JDK
Resolved Date:
2011-03-08
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
x86
Priority:
P4
Resolution:
Fixed
Affected Versions:
hs16
Fixed Versions:
hs20

Related Reports
Backport:
Backport:

Sub Tasks

Description
I just compiled rt.jar :)

How to reproduce (lniux-i586):

/net/vmsqe.russia/export/jdk/re/7/promoted/ea/b68/binaries/linux-i586/fastdebug//bin/java  -server  -XX:-ShowMessageBoxOnError -Xverify:all  -XX:+CompileTheWorld -XX:CompileTheWorldStartAt=16000 -XX:MaxPermSize=131072K -Xbootclasspath/p:/net/vmsqe.russia/export/jdk/re/7/promoted/ea/b68/binaries/linux-i586/fastdebug/jre/lib/rt.jar 

Output:

VM option '-ShowMessageBoxOnError'
VM option '+CompileTheWorld'
VM option 'CompileTheWorldStartAt=16000'
VM option 'MaxPermSize=131072K'
Warning:  Cannot open log file: hotspot.log
Warning:  Forcing option -XX:LogFile=/tmp//hs_pid3247.log
CompileTheWorld : Compiling all classes in /net/jse-st01.russia/export4/java/re/jdk/7/promoted/ea/b68/binaries/linux-i586/fastdebug/jre/lib/rt.jar

Aug 26, 2009 6:10:10 PM com.sun.org.apache.xml.internal.security.utils.CachedXPathFuncHereAPI fixupFunctionTable
INFO: Registering Here function
Preloading failed for (5808) com/sun/xml/internal/fastinfoset/dom/DOMDocumentParser
Preloading failed for (5817) com/sun/xml/internal/fastinfoset/sax/SAXDocumentParser
Preloading failed for (5823) com/sun/xml/internal/fastinfoset/stax/StAXDocumentParser
Preloading failed for (6422) com/sun/xml/internal/ws/binding/BindingImpl
Preloading failed for (6454) com/sun/xml/internal/ws/client/WSServiceDelegate
Preloading failed for (6666) com/sun/xml/internal/ws/model/RuntimeModeler
Preloading failed for (6676) com/sun/xml/internal/ws/model/wsdl/WSDLBoundPortTypeImpl
Preloading failed for (6935) com/sun/xml/internal/ws/wsdl/parser/RuntimeWSDLParser
Java HotSpot(TM) Server VM warning: JSR 292 method handles are disabled in this JVM.  Use -XX:+EnableMethodHandles to enable.
Preloading failed for (8376) java/util/JapaneseImperialCalendar
CompileTheWorld (16000) : javax/swing/event/AncestorEvent
CompileTheWorld (16001) : javax/swing/JTable$5
CompileTheWorld (16002) : javax/swing/JTable$Resizable2
CompileTheWorld (16003) : javax/swing/JTable$Resizable3
CompileTheWorld (16004) : javax/swing/JTable$2
CompileTheWorld (16005) : sun/awt/X11/MotifDnDConstants
# To suppress the following error report, specify this argument
# after -XX: or in .hotspotrc:  SuppressErrorAt=/type.cpp:2055
#
# A fatal error has been detected by the Java Runtime Environment:
#
#  Internal Error (/BUILD_AREA/jdk7/hotspot/src/share/vm/opto/type.cpp:2055), pid=3247, tid=1807641504
#  Error: assert(bits,"Use TypePtr for NULL")
#
# JRE version: 7.0-b68
# Java VM: Java HotSpot(TM) Server VM (16.0-b07-fastdebug mixed mode linux-x86 )
# An error report file with more information is saved as:
# /tmp/hs_err_pid3247.log
#
# If you would like to submit a bug report, please visit:
#   http://java.sun.com/webapps/bugreport/crash.jsp
#
Current thread is 1807641504
Dumping core ...
Aborted

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/78e248949382
                                     
2011-01-08
PUBLIC COMMENTS

Missing 0 value check in TypeRawPtr::add_offset().

CastX2P node in address expression for unsafe memory operation
AddP(top, (CastX2P(SubI(3, loop_phi)), long) transformed into
AddP(top, ConP#3, SubI(0, loop_phi)):

for (int idx = 0; idx < 4; idx++) {
  unsafe.putByte(bufptr + (3-idx), b);

After loop full unroll this expression transformed
into AddP(top, ConP#3, -3). We hit assert during type
calculation for this node.
                                     
2011-01-08



Hardware and Software, Engineered to Work Together