6876037: CTW fails jdk7/hotspot/src/share/vm/opto/type.cpp:2055. assert(bits,"Use TypePtr for NULL")

Add missing 0 value check in TypeRawPtr::add_offset().

Reviewed-by: never